Init spec and release as 0.0.1

--- a/release.json
+++ b/release.json
@@ -1,12 +1,12 @@
 {
   "nio/WeatherUndergroundConditions": {
-    "Reference": "github.com/nio-blocks/weather_underground.git@v1.0.0",
-    "Language": "Python",
-    "Version": "1.0.0"
+    "language": "Python",
+    "version": "0.0.1",
+    "reference": "github.com/nio-blocks/weather_underground.git@v0.0.1"
   },
   "nio/WeatherUndergroundForecast10Day": {
-    "Reference": "github.com/nio-blocks/weather_underground.git@v1.0.0",
-    "Language": "Python",
-    "Version": "1.0.0"
+    "language": "Python",
+    "version": "0.0.1",
+    "reference": "github.com/nio-blocks/weather_underground.git@v0.0.1"
   }
 }
