Reformat release.json url

--- a/release.json
+++ b/release.json
@@ -2,11 +2,11 @@
   "nio/WeatherUndergroundConditions": {
     "language": "Python",
     "version": "0.0.1",
-    "reference": "github.com/nio-blocks/weather_underground.git@v0.0.1"
+    "url": "git://github.com/nio-blocks/weather_underground.git"
   },
   "nio/WeatherUndergroundForecast10Day": {
     "language": "Python",
     "version": "0.0.1",
-    "reference": "github.com/nio-blocks/weather_underground.git@v0.0.1"
+    "url": "git://github.com/nio-blocks/weather_underground.git"
   }
 }
